apps/audiobookshelf copy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: vikunja
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
